@@ -5,18 +5,25 @@ allprojects {
         mavenCentral()
     }
 
-    //TODO: check which dependencies are not used in other modules
     dependencies {
         implementation group: 'org.springframework', name: 'spring-tx', version: springVersion
         testImplementation group: 'org.springframework', name: 'spring-test', version: springVersion
 
         implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: dbcpVersion
         implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion
+        compileOnly("javax.servlet:javax.servlet-api:4.0.1")
 
 
+    }
+
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
     }
 
     test {
         useJUnitPlatform()
+        jvmArgs(['--enable-preview'])
     }
+
+
 }
